--- a/app/blocks/link/link.pug
+++ b/app/blocks/link/link.pug
@@ -10,5 +10,5 @@ mixin link-icon(iconname)
       block
 
 mixin link-top(color)
-  +b.A.link-top&attributes(attributes)
+  +b.A(href="#").link-top&attributes(attributes)
     block
