--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -2,12 +2,11 @@
   display: block;
   width: 100%;
   font-size: 16px;
-  letter-spacing: -0.34px;
   color: $color-wite;
 
   &__left {
     flex: 1;
-    padding: 64px 67px 52px 67px;
+    padding: 61px 69px 52px 69px;
     background: $color-grey-dark;
     display: flex;
     flex-direction: column;
@@ -28,7 +27,7 @@
     &_center {
       border-left: 1px solid $color-basic;
       border-right: 1px solid $color-basic;
-      padding: 0 10px;
+      padding: 0 9px;
     }
     &_left {
       padding-right: 12px;
@@ -42,7 +41,7 @@
   &__top-link {
     color: $color-wite;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 17px;
   }
 
   &__sqad-list {
@@ -68,15 +67,19 @@
 
   &__title {
     font-size: 38px;
-    letter-spacing: -.8px;
     display: block;
     margin-bottom: auto;
     line-height: 1.3;
+    &_info {
+      font-size: 50px;
+      letter-spacing: 1px;
+      line-height: 1.1;
+    }
   }
 
   &__down-list {
     display: flex;
-    margin-bottom: 61px;
+    margin-bottom: 62px;
     margin-top: 10px;
   }
 
@@ -110,7 +113,6 @@
 
   &__start-price {
     font-size: 24px;
-    letter-spacing: -0.5px;
     font-weight: 700;
   }
 
@@ -120,4 +122,3 @@
     fill: $color-wite;
   }
 }
-
