--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -119,3 +119,8 @@
     font-size: 15px;
   }
 }
+
+.footer__logo-cube {
+
+  fill:linear-gradient(to left, $color-gradient-one 0%, $color-gradient-two 100%);
+}
