--- a/app/components/info/info.pug
+++ b/app/components/info/info.pug
@@ -3,7 +3,7 @@ mixin info()
     +b.info&attributes(attributes)
       +e.__content
         +e.__content-left
-          +e.H1.__title.banner__title The place where you can find your dream workspace.
+          +e.H1.__title.banner__title._info The place where you can find your dream workspace.
         +e.__content-right
           +e.__links
             +e.__links-text What are you searching for?
