--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -9,6 +9,7 @@ block content
 
     +info
     .container.container_slider
+      .content-left__title Featured Spaces
       +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -40,9 +41,33 @@ block content
           .slider-plach EC2A, London
 
     .container
+      .title-map
+        .title-map__title Locations
+        +select.footer-select.select-slider
+                option(value="London")
+                option(value="London")
+                option(value="London")
+                option(value="London")
+        +select.footer-select.select-slider
+                option(value="Areas")
+                option(value="Areas")
+                option(value="Areas")
+                option(value="Areas")
+        +select.footer-select.select-slider
+                option(value="Tube Stations")
+                option(value="Tube Stations")
+                option(value="Tube Stations")
+                option(value="Tube Stations")
+        +select.footer-select.select-slider
+                option(value="Workplace type")
+                option(value="Workplace type")
+                option(value="Workplace type")
+                option(value="Workplace type")
+        .title-map__title.title-map__title_last &#169; Clear map settings
       +map()#map
 
     .container.container_slider
+      .content-left__title Meeting Rooms
       +slider-two(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -76,6 +101,7 @@ block content
     +info-two
 
     .container.container_slider
+      .content-left__title New Places
       +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -110,6 +136,9 @@ block content
 
 
     .container.container_slider
+      +e.__title
+      .content-left__title Articles
+
       +slider-two(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
