--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -1,3 +1,43 @@
 .page1 {
   display: block;
+  #map {
+    margin: 100px 0;
+  }
+  .choices {
+    margin-right: 50px !important;
+    height: 17px !important;
+    margin-bottom: 0 !important;
+
+    &__inner {
+      height: 17px !important;
+      padding: 0 !important;
+      padding-right: 20px !important;
+      border: 0 !important;
+    }
+    &__item {
+      padding: 0 !important;
+    }
+  }
 }
+
+.title-map {
+  display: flex;
+  align-items: center;
+  margin-top: 73px;
+
+  &__title {
+    margin-right: 50px;
+    font-size: 25px;
+    font-weight: 700;
+    &_last {
+      margin-right: 0;
+      margin-left: auto;
+      font-size: 20px;
+    }
+  }
+}
+
+.select-slider {
+  margin-right: 50px;
+}
+
