--- a/app/styles/helpers/_fonts.scss
+++ b/app/styles/helpers/_fonts.scss
@@ -2,14 +2,14 @@
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 100;
-  src: url('ProximaNovaLTThin.eot');
+  src: url('../fonts/ProximaNovaLTThin.eot');
   src:
-    url('ProximaNovaLTThin.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaLTThin.woff2') format('woff2'),
-    url('ProximaNovaLTThin.woff') format('woff'),
-    url('ProximaNovaLTThin.otf')  format('opentype'),
-    url('ProximaNovaLTThin.ttf')  format('truetype'),
-    url('ProximaNovaLTThin.svg#ProximaNovaLTThin') format('svg');
+    url('../fonts/ProximaNovaLTThin.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaLTThin.woff2') format('woff2'),
+    url('../fonts/ProximaNovaLTThin.woff') format('woff'),
+    url('../fonts/ProximaNovaLTThin.otf')  format('opentype'),
+    url('../fonts/ProximaNovaLTThin.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaLTThin.svg#ProximaNovaLTThin') format('svg');
 }
 
 
@@ -17,70 +17,70 @@
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 300;
-  src: url('ProximaNovaLight.eot');
+  src: url('../fonts/ProximaNovaLight.eot');
   src:
-    url('ProximaNovaLight.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaLight.woff2') format('woff2'),
-    url('ProximaNovaLight.woff') format('woff'),
-    url('ProximaNovaLight.otf')  format('opentype'),
-    url('ProximaNovaLight.ttf')  format('truetype'),
-    url('ProximaNovaLight.svg#ProximaNovaLight') format('svg');
+    url('../fonts/ProximaNovaLight.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaLight.woff2') format('woff2'),
+    url('../fonts/ProximaNovaLight.woff') format('woff'),
+    url('../fonts/ProximaNovaLight.otf')  format('opentype'),
+    url('../fonts/ProximaNovaLight.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaLight.svg#ProximaNovaLight') format('svg');
 }
 
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 400;
-  src: url('ProximaNovaRegular.eot');
+  src: url('../fonts/ProximaNovaRegular.eot');
   src:
-    url('ProximaNovaRegular.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaRegular.woff2') format('woff2'),
-    url('ProximaNovaRegular.woff') format('woff'),
-    url('ProximaNovaRegular.otf')  format('opentype'),
-    url('ProximaNovaRegular.ttf')  format('truetype'),
-    url('ProximaNovaRegular.svg#ProximaNovaRegular') format('svg');
+    url('../fonts/ProximaNovaRegular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaRegular.woff2') format('woff2'),
+    url('../fonts/ProximaNovaRegular.woff') format('woff'),
+    url('../fonts/ProximaNovaRegular.otf')  format('opentype'),
+    url('../fonts/ProximaNovaRegular.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaRegular.svg#ProximaNovaRegular') format('svg');
 }
 
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 600;
-  src: url('ProximaNovaRegular.eot');
+  src: url('../fonts/ProximaNovaRegular.eot');
   src:
-    url('ProximaNovaSemibold.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaSemibold.woff2') format('woff2'),
-    url('ProximaNovaSemibold.woff') format('woff'),
-    url('ProximaNovaSemibold.otf')  format('opentype'),
-    url('ProximaNovaSemibold.ttf')  format('truetype'),
-    url('ProximaNovaSemibold.svg#ProximaNovaSemibold') format('svg');
+    url('../fonts/ProximaNovaSemibold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaSemibold.woff2') format('woff2'),
+    url('../fonts/ProximaNovaSemibold.woff') format('woff'),
+    url('../fonts/ProximaNovaSemibold.otf')  format('opentype'),
+    url('../fonts/ProximaNovaSemibold.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaSemibold.svg#ProximaNovaSemibold') format('svg');
 }
 
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 700;
-  src: url('ProximaNovaBold.eot');
+  src: url('../fonts/ProximaNovaBold.eot');
   src:
-    url('ProximaNovaBold.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaBold.woff2') format('woff2'),
-    url('ProximaNovaBold.woff') format('woff'),
-    url('ProximaNovaBold.otf')  format('opentype'),
-    url('ProximaNovaBold.ttf')  format('truetype'),
-    url('ProximaNovaBold.svg#ProximaNovaBold') format('svg');
+    url('../fonts/ProximaNovaBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaBold.woff2') format('woff2'),
+    url('../fonts/ProximaNovaBold.woff') format('woff'),
+    url('../fonts/ProximaNovaBold.otf')  format('opentype'),
+    url('../fonts/ProximaNovaBold.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaBold.svg#ProximaNovaBold') format('svg');
 }
 
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
   font-weight: 800;
-  src: url('ProximaNovaExtrabld.eot');
+  src: url('../fonts/ProximaNovaExtrabld.eot');
   src:
-    url('ProximaNovaExtrabld.eot?#iefix') format('embedded-opentype'),
-    url('ProximaNovaExtrabld.woff2') format('woff2'),
-    url('ProximaNovaExtrabld.woff') format('woff'),
-    url('ProximaNovaExtrabld.otf')  format('opentype'),
-    url('ProximaNovaExtrabld.ttf')  format('truetype'),
-    url('ProximaNovaExtrabld.svg#ProximaNovaExtrabld') format('svg');
+    url('../fonts/ProximaNovaExtrabld.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ProximaNovaExtrabld.woff2') format('woff2'),
+    url('../fonts/ProximaNovaExtrabld.woff') format('woff'),
+    url('../fonts/ProximaNovaExtrabld.otf')  format('opentype'),
+    url('../fonts/ProximaNovaExtrabld.ttf')  format('truetype'),
+    url('../fonts/ProximaNovaExtrabld.svg#ProximaNovaExtrabld') format('svg');
 }
 
 /* Соответствие письменного названия жирности числовому значению
