--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -33,7 +33,8 @@
 
 
 .link-top {
-  padding: 7px;
+  padding: 0;
+  cursor: pointer;
   border-bottom: 2px solid $color-yellow;
   border-top: 2px solid rgba(0, 0, 0, 0);
   border-left: 2px solid rgba(0, 0, 0, 0);
