--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -103,6 +103,10 @@
 
 .choices__inner {
   height: 80px !important;
+  &:hover {
+    background: $color-bg !important;
+    opacity: 1 !important;
+  }
 }
 
 .choices__item {
