--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -49,7 +49,7 @@ mixin content-left()
         +accordions
           +accordion.is-active
             +accordion-header 
-              +accordion-button +
+              +accordion-button.is-active-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +icon('heart').__heart
@@ -63,7 +63,7 @@ mixin content-left()
 
           +accordion
             +accordion-header 
-              +accordion-button +
+              +accordion-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +e.__text-acr AVIALABLE NOW
@@ -77,7 +77,7 @@ mixin content-left()
         +accordions
           +accordion.is-active
             +accordion-header 
-              +accordion-button +
+              +accordion-button.is-active-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +e.__text-acr AVIALABLE NOW
@@ -85,7 +85,7 @@ mixin content-left()
               +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +accordion
             +accordion-header 
-              +accordion-button +
+              +accordion-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +e.__text-acr AVIALABLE NOW
@@ -95,7 +95,7 @@ mixin content-left()
         +accordions
           +accordion.is-active
             +accordion-header 
-              +accordion-button +
+              +accordion-button.is-active-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +e.__text-acr AVIALABLE NOW
@@ -103,7 +103,7 @@ mixin content-left()
               +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +accordion
             +accordion-header 
-              +accordion-button +
+              +accordion-button
               +e.__hot-desc hot desc
               +e.__price £185 per month
               +e.__text-acr AVIALABLE NOW
