--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -87,16 +87,16 @@
   }
 
   .button {
-    margin-left: 11px;
+    margin-left: 6px;
     padding: 3px 3px;
-    font-size: 12px;
-    letter-spacing: -0.3px;
+    font-size: 16px;
     font-weight: 700;
+    letter-spacing: -.8px;
     &_gradient {
-      padding: 7px 11px;
+      padding: 3px 11px;
     }
     &__text {
-      padding: 4px 11px;
+      padding: 0px 9px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -104,7 +104,7 @@
   }
 
   &__body {
-    padding: 10px;
+    padding: 0px 0px 10px 37px;
     border-bottom: 1px solid $color-border;
 
     width: 100%;
