--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -9,8 +9,8 @@ block content
 
     +info
     .container.container_slider
-      .content-left__title Featured Spaces
-      +slider-three(false, true)
+      .content-left__title.content-left__title_page Featured Spaces
+      +slider-two(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
           .slider-cube
@@ -67,8 +67,8 @@ block content
       +map()#map
 
     .container.container_slider
-      .content-left__title Meeting Rooms
-      +slider-two(false, true)
+      .content-left__title.content-left__title_page Meeting Rooms
+      +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
           .slider-cube
@@ -101,7 +101,7 @@ block content
     +info-two
 
     .container.container_slider
-      .content-left__title New Places
+      .content-left__title.content-left__title_page New Places
       +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -137,7 +137,7 @@ block content
 
     .container.container_slider
       +e.__title
-      .content-left__title Articles
+      .content-left__title.content-left__title_page Articles
 
       +slider-two(false, true)
         +slide-two
