--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -1,17 +1,18 @@
 .page1 {
   display: block;
   #map {
-    margin: 100px 0;
+    margin: 65px 0;
+    height: 470px;
   }
   .choices {
-    margin-right: 50px !important;
+    margin-right: 54px !important;
     height: 17px !important;
     margin-bottom: 0 !important;
 
     &__inner {
       height: 17px !important;
       padding: 0 !important;
-      padding-right: 20px !important;
+      padding-right: 55px !important;
       border: 0 !important;
     }
     &__item {
@@ -23,7 +24,7 @@
 .title-map {
   display: flex;
   align-items: center;
-  margin-top: 73px;
+  margin-top: 110px;
 
   &__title {
     margin-right: 50px;
@@ -41,3 +42,6 @@
   margin-right: 50px;
 }
 
+.content-left__title_page {
+  margin-bottom: 64px;
+}
