--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -40,6 +40,8 @@
   border-left: 2px solid rgba(0, 0, 0, 0);
   border-right: 2px solid rgba(0, 0, 0, 0);
   transition: border-color $ease-main;
+  font-weight: 700;
+  padding: 3px;
 
   &:hover {
     border: 2px solid $color-yellow;
