--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -25,6 +25,11 @@
     &_offers {
       margin-bottom: 37px;
     }
+
+    &_page {
+      margin-bottom: 60px;
+      margin-top: 100px;
+    }
   }
 
   &__text {
