slide layouts page1

--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -131,6 +131,19 @@
       }
     }
   }
+
+  &-cube__text {
+    font-size: 16px;
+    font-weight: 700;
+    color: $color-basic-dark;
+    text-align: left;
+  }
+  &-text {
+    color: $color-basic-light;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+  }
 }
 
 .slider-title{
