--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -71,30 +71,22 @@ block content
       +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
-          .slider-cube
-            .cube
+          .slider-cube__text 18 seats
           .slider-title__slide TOG - Henry Wood House
           .slider-plach W1W, London
         +slide-two
           img(src='./assets/images/sbt.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
+          .slider-cube__text 18 seats
           .slider-title__slide Blooming Founders (Former Blooms Lon...
           .slider-plach EC2A, London
         +slide-two
           img(src='./assets/images/sbth.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
+          .slider-cube__text 18 seats
           .slider-title__slide Blooming Founders (Former Blooms Lon...
           .slider-plach EC2A, London
-        +slide-two
+        +slide-two 18 seats
           img(src='./assets/images/sbf.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
+          .slider-cube__text 18 seats
           .slider-title__slide Blooming Founders (Former Blooms Lon...
           .slider-plach EC2A, London
 
@@ -142,31 +134,23 @@ block content
       +slider-two(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
-          .slider-cube
-            .cube
+          .slider-cube__text September 9
           .slider-title__slide TOG - Henry Wood House
-          .slider-plach W1W, London
+          .slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
         +slide-two
           img(src='./assets/images/sbt.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
+          .slider-cube__text September 9
           .slider-title__slide Blooming Founders (Former Blooms Lon...
-          .slider-plach EC2A, London
+          .slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
         +slide-two
           img(src='./assets/images/sbth.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
+          .slider-cube__text September 9
           .slider-title__slide Blooming Founders (Former Blooms Lon...
-          .slider-plach EC2A, London
+          .slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
         +slide-two
           img(src='./assets/images/sbf.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
+          .slider-cube__text September 9
           .slider-title__slide Blooming Founders (Former Blooms Lon...
-          .slider-plach EC2A, Lond
+          .slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
     
     +footer
