page1 info select fix

--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -4,21 +4,24 @@
     margin: 65px 0;
     height: 470px;
   }
-  .choices {
-    margin-right: 54px !important;
-    height: 17px !important;
-    margin-bottom: 0 !important;
-
-    &__inner {
+  .info {
+    .choices {
+      margin-right: 54px !important;
       height: 17px !important;
-      padding: 0 !important;
-      padding-right: 55px !important;
-      border: 0 !important;
-    }
-    &__item {
-      padding: 0 !important;
+      margin-bottom: 0 !important;
+  
+      &__inner {
+        height: 17px !important;
+        padding: 0 !important;
+        padding-right: 55px !important;
+        border: 0 !important;
+      }
+      &__item {
+        padding: 0 !important;
+      }
     }
   }
+  
   .footer {
     margin-top: 100px;
   }
