--- a/app/components/info/info.scss
+++ b/app/components/info/info.scss
@@ -109,4 +109,9 @@
 .info-two {
   margin-top: 100px;
   background: url('../images/bottom.jpg') center center no-repeat;
+  .button {
+    width: 200px;
+    margin-top: 40px;
+    margin-bottom: 70px;
+  }
 }
