--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -4,7 +4,8 @@
     margin: 65px 0;
     height: 470px;
   }
-  .info {
+  .info,
+  .title-map {
     .choices {
       margin-right: 54px !important;
       height: 17px !important;
@@ -18,6 +19,13 @@
       }
       &__item {
         padding: 0 !important;
+      }
+    }
+  }
+  .title-map {
+    .choices {
+      &__inner {
+        padding-right: 20px !important;
       }
     }
   }
