--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -23,10 +23,29 @@
     }
   }
   .title-map {
+    .choices[data-type*=select-one]:after {
+      margin-top: auto;
+      margin-bottom: 2px;
+    }
     .choices {
+      
       &__inner {
         padding-right: 20px !important;
+       
+        height: 22px!important;
       }
+      &__item {
+        font-size: 20px;
+        font-weight: 700;
+        margin-bottom: 5px !important;
+        
+      }
+      &__list {
+        z-index: 100;
+      }
+    }
+    .choices__list--dropdown {
+      margin-top: 5px;
     }
   }
   
