--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -16,9 +16,14 @@
         padding: 0 !important;
         padding-right: 55px !important;
         border: 0 !important;
+
       }
       &__item {
         padding: 0 !important;
+        &:hover {
+          background: $color-bg !important;
+          color: $color-basic;
+        }
       }
     }
   }
@@ -29,17 +34,29 @@
     }
     .choices {
       
+      
+      &__item {
+        font-size: 16px;
+        margin-bottom: 5px !important;
+        padding: 5px !important;
+        &:hover {
+          background: $color-basic !important;
+          color: $color-wite;
+        }
+
+      }
+
       &__inner {
         padding-right: 20px !important;
-       
-        height: 22px!important;
-      }
-      &__item {
-        font-size: 20px;
         font-weight: 700;
-        margin-bottom: 5px !important;
+        height: 22px!important;
+        .choices__item {
+          font-size: 20px !important;
+          padding:0 5px !important;
+        }
         
       }
+
       &__list {
         z-index: 100;
       }
