--- a/app/blocks/burger/burger.pug
+++ b/app/blocks/burger/burger.pug
@@ -1,5 +1,3 @@
 mixin burger()
   +b.burger&attributes(attributes)
-    +e.__line._top
-    +e.__line._center
-    +e.__line._bottom
+    +icon('burger')
