--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -43,6 +43,6 @@
 
   &:hover,
   &.is-active { 
-    background: linear-gradient(to left, $color-gradient-two 0%, $color-gradient-one 100%);
+    // background: linear-gradient(to left, $color-gradient-two 0%, $color-gradient-one 100%);
    }
 }
