--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -7,13 +7,13 @@ mixin slider(pagination, buttons)
         +e.dot
     if buttons
       +e.button._prev
+        +icon('arrow2')
       +e.button._next
+        +icon('arrow2')
 
 mixin slide(href)
   .swiper-slide
     +e.slide&attributes(attributes)
-      +e.A(href=href).__search.js-fancybox
-        +icon('search').__search-img
       block
 
 mixin slide-two()
@@ -31,7 +31,9 @@ mixin slider-two(pagination, buttons)
         +e.dot
     if buttons
       +e.button._prev
+        +icon('arrow2')
       +e.button._next
+        +icon('arrow2')
 
 
 mixin slider-three(pagination, buttons)
@@ -43,4 +45,6 @@ mixin slider-three(pagination, buttons)
         +e.dot
     if buttons
       +e.button._prev
+        +icon('arrow2')
       +e.button._next
+        +icon('arrow2')
