--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -5,15 +5,15 @@
   color: $color-wite;
 
   &__left {
-    flex: 1;
-    padding: 61px 69px 52px 69px;
+    width: 30%;
+    padding: 61px 32px 54px 66px;
     background: $color-grey-dark;
     display: flex;
     flex-direction: column;
   }
 
   &__right {
-    flex: 2.5;
+    width: 70%;
     overflow: hidden;
   }
 
