--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -6,15 +6,15 @@
     margin-right: auto;
     display: flex;
     align-items: center;
-    &-cube {
+    #header-cube {
       height: 54px;
       width: 47px;
       margin-right: 10px;
-      .st0{fill:#fff;}
     }
-    &-text {
+    #header-text {
       height: 21px;
       width: 113px;
+      fill: #415a65;
     }
   }
   padding: 30px 0;
@@ -23,9 +23,8 @@
 .header-js {
   background: $color-wite;
   .header__logo {
-    &-text {
+    #header-text {
       display: none;
     }
-    
   }
 }
