--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -32,12 +32,12 @@ mixin banner()
         +e.__start-price £300 per month
       +e.__right
         +slider(false, true)
-          +slide('./assets/images/slide.jpg')
+          +slide()
             img(src='./assets/images/slide.jpg').slide-img
-          +slide('./assets/images/slide-two.jpg')
+          +slide()
             img(src='./assets/images/slide-two.jpg').slide-img
-          +slide('./assets/images/slide-three.jpg')
+          +slide()
             img(src='./assets/images/slide-three.jpg').slide-img
-          +slide('./assets/images/slide-one.jpg')
+          +slide()
             img(src='./assets/images/slide-one.jpg').slide-img
 
