--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -4,6 +4,7 @@
   position: relative;
   height: 100%;
   &__slide {
+    height: 100%;
     text-align: center;
     position: relative;
     cursor: pointer;
@@ -141,6 +142,9 @@
     font-size: 16px;
     font-weight: 400;
     text-align: left;
+  }
+  img {
+    height: 100%;
   }
 }
 
