--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -26,6 +26,7 @@
 .leaflet-touch .leaflet-bar, .leaflet-touch .leaflet-control-layers {
   border: none;
   box-shadow: 0 2px 4px rgba($color-basic, .2);
+  display: none;
 }
 
 .leaflet-bar a {
