--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -3,11 +3,11 @@ mixin banner()
     .container.container_banner
       +e.__left
         +e.UL.__top-list
-          +e.LI.__top-item._left
+          +e.LI.__top-item
             +e.A(href="#").__top-link London
-          +e.LI.__top-item._center
+          +e.LI.__top-item
             +e.A(href="#").__top-link Kensington
-          +e.LI.__top-item._right
+          +e.LI.__top-item
             +e.A(href="#").__top-link EC2A,London
         
         +e.UL.__sqad-list 
@@ -27,6 +27,7 @@ mixin banner()
             +e.A(href="#").__link-item
               +icon('arrow3').__svg
               +e.__text Download as PDF
+          
 
         +e.__start Starting at Just
         +e.__start-price £300 per month
