--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -1,5 +1,5 @@
 mixin banner()
-  +b.banner&attributes(attributes)
+  +b.SECTION.banner&attributes(attributes)
     .container.container_banner
       +e.__left
         +e.UL.__top-list
