--- a/app/components/breadcrumbs-box/breadcrumbs-box.pug
+++ b/app/components/breadcrumbs-box/breadcrumbs-box.pug
@@ -1,4 +1,4 @@
 mixin breadcrumbs-box()
-  +b.breadcrumbs-box&attributes(attributes)
+  +b.NAV.breadcrumbs-box&attributes(attributes)
     .container.container_content
       +breadcrumbs(['London', 'Kensington', 'Boutique Workplace - 1 Neal Street'])
