--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -1,5 +1,5 @@
 mixin footer()
-  +b.footer&attributes(attributes)
+  +b.FOOTER.footer&attributes(attributes)
     .container
       +e.__top
         +e.__col
