--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -1,5 +1,5 @@
 mixin header()
-  +b.header&attributes(attributes)
+  +b.HEADER.header&attributes(attributes)
     .container.container_flex
       +e.A(href="./").__logo
         // ?xml version="1.0" encoding="utf-8"?
