--- a/app/components/content/content.pug
+++ b/app/components/content/content.pug
@@ -1,5 +1,5 @@
 mixin content()
-  +b.content&attributes(attributes)
+  +b.SECTION.content&attributes(attributes)
     .container.container_content
       +content-left
       +e.__right
