--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -23,6 +23,7 @@
 .header-js {
   background: $color-wite;
   padding: 8px 0;
+  box-shadow: 1px 1px #dbe1e3;
   .header__logo {
     #header-text {
       display: none;
