--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -10,6 +10,8 @@ mixin slider(pagination, buttons)
         +icon('arrow2')
       +e.button._next
         +icon('arrow2') 
+      +e.A(href="/assets/images/slide.jpg").__search
+        +icon('search').__search-img
 
 mixin slide(href)
   .swiper-slide
