--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -34,11 +34,11 @@ mixin banner()
       +e.__right
         +slider(false, true)
           +slide()
-            img(src='./assets/images/slide.jpg').slide-img
+            img(rel="group" src='./assets/images/slide.jpg').slide-img
           +slide()
-            img(src='./assets/images/slide-two.jpg').slide-img
+            img(rel="group" src='./assets/images/slide-two.jpg').slide-img
           +slide()
-            img(src='./assets/images/slide-three.jpg').slide-img
+            img(rel="group" src='./assets/images/slide-three.jpg').slide-img
           +slide()
-            img(src='./assets/images/slide-one.jpg').slide-img
+            img(rel="group" src='./assets/images/slide-one.jpg').slide-img
 
