--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -24,12 +24,14 @@ $breadpadding: 35px;
 
     .link {
       font-size: 14px;
+      color: $color-basic;
       span {
+
         border-bottom: 0px solid #fff;
       }
       &:hover {
         span {
-          border-bottom: 1px solid $color-basic-dark;
+          border-bottom: 1px solid $color-basic;
         }
       }
     }
@@ -43,4 +45,5 @@ $breadpadding: 35px;
       }
     }
   }
+  
 }
