--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -47,7 +47,7 @@ mixin content-left()
     +tabs-content
       +tab-wrapper()(data-tab="tab1" data-tab-group="testtabs").active
         +accordions
-          +accordion.is-active
+          +accordion.is-active-body
             +accordion-header 
               +accordion-button.is-active-button
               +e.__hot-desc hot desc
