--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -20,7 +20,11 @@
   padding: 30px 0;
 }
 
-.header-js {
+.is-fixed {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   background: $color-wite;
   padding: 8px 0;
   box-shadow: 1px 1px #dbe1e3;
