--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -1,5 +1,5 @@
 mixin slider(pagination, buttons)
-  +b.slider&attributes(attributes).swiper-container.js-slider
+  +b.slider.slider&attributes(attributes).swiper-container.js-slider
     .swiper-wrapper
       block
     if pagination
@@ -10,7 +10,7 @@ mixin slider(pagination, buttons)
         +icon('arrow2')
       +e.button._next
         +icon('arrow2') 
-      +e.A(href="/assets/images/slide.jpg").__search
+      +e.A(href="#").__search
         +icon('search').__search-img
 
 mixin slide(href)
