--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -33,12 +33,12 @@ mixin banner()
         +e.__start-price £300 per month
       +e.__right
         +slider(false, true)
-          +slide()
+          +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide.jpg').slide-img
-          +slide()
+          +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide-two.jpg').slide-img
-          +slide()
+          +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide-three.jpg').slide-img
-          +slide()
+          +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide-one.jpg').slide-img
 
